--- a/how_to/github/index.html
+++ b/how_to/github/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
 
-        <a href="https://github.com/hyun98/Project_AlgoStudy">
+        <a href="https://github.com/POBSIZ/Project_BackEndStudy">
             <div class="home"></div>
         </a>
 
@@ -166,7 +166,7 @@
                 <span class="foot__info--text">기본적인 깃과 깃 허브의 사용법을 배우셨습니다!</span><br>
                 <span class="foot__info--author">Made by Won</span>
             </div>
-            <a style="text-decoration:none;" href="../../index.html">메인 화면으로 돌아가기</a>
+            <a style="text-decoration:none;" href="https://github.com/POBSIZ/Project_BackEndStudy">메인 화면으로 돌아가기</a>
         </div>
         <ul class="howto__list">
           <li class="howto__list--item">
